--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
     --gray-400: #94a3b8;
     --gray-200: #e2e8f0;
     --purple: #7c3aed;
+    --white: #fff;
 }
 
 header {
@@ -66,6 +67,7 @@ main {
     padding: 1rem 0.75rem;
     border: 1px solid var(--gray-200);
     border-radius: 0.25rem;
+    color: var(--gray-800);
 }
 
 .login input::placeholder {
@@ -85,4 +87,17 @@ main {
 
 .login a:hover {
     text-decoration: underline;
+}
+
+.login button {
+    margin-top: 1rem;
+    padding-block: 1rem;
+    width: 100%;
+    background: var(--purple);
+    border: none;
+    border-radius: 0.4rem;
+
+    font-size: 1rem;
+    font-weight: 700;
+    color: var(--white);
 }
