--- a/style.css
+++ b/style.css
@@ -112,6 +112,10 @@ main {
     font-size: 1rem;
 }
 
+.bg-desktop {
+    display: none;
+}
+
 @media(min-width: 1000px) {
     header {
         background: none;
@@ -125,5 +129,14 @@ main {
 
     main {
         padding-inline: 7rem;
+    }
+
+    .conteudo {
+        width: 100%;
+    }
+
+    .bg-desktop {
+        display: block;
+        width: 100%;
     }
 }
