termino das alterações do conteudo

--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
     --gray-400: #94a3b8;
     --gray-200: #e2e8f0;
     --purple: #7c3aed;
+    --light-purple: #9f67ff;
     --white: #fff;
 }
 
@@ -103,6 +104,12 @@ main {
     color: var(--white);
 }
 
+.login button:hover {
+    background: var(--light-purple);
+    transition: 0.3s;
+    cursor: pointer;
+}
+
 .login > p {
     color: var(--gray-600);
 }
@@ -117,6 +124,10 @@ main {
 }
 
 @media(min-width: 1000px) {
+    body {
+        display: flex;
+    }
+    
     header {
         background: none;
         justify-content: flex-start;
@@ -137,10 +148,21 @@ main {
 
     .conteudo {
         width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 
     .bg-desktop {
         display: block;
         width: 100%;
+    }
+
+    .desc h1 {
+        font-size: 2.25rem;
+    }
+
+    .desc p {
+        font-size: 1rem;
     }
 }
